--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
     "reactstrap": "^9.0.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "homepage": "https://sergey-seredkin.github.io"
   },
   "scripts": {
     "start": "react-scripts start",
